# wingz-app

./: .coveragec  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
etc/: gunicorn.conf.py
wingz/: asgi.py  urls.py  wsgi.py
wingz/db/: __init__.py  mixins.py  models.py
wingz/restframework/: exceptions.py  filters.py  pagination.py  permissions.py  serializers.py  tests.py  views.py
wingz/settings/: base.py  deploy.py  develop.py  local.example.py  testing.py
wingz/utils/: random.py  swagger_view.py
wingz_riding/: apps.py  constants.py  urls.py
wingz_riding/filters/: ride.py
wingz_riding/migrations/: 0001_initial.py
wingz_riding/models/: __init__.py  ride.py  ride_event.py
wingz_riding/scripts/: init_event_data.py  init_ride_data.py
wingz_riding/serializers/: __init__.py  ride.py  ride_event.py
wingz_riding/tests/test_views/: test_ride.py
wingz_riding/views/: ride.py
wingz_sso/: apps.py  constants.py  urls.py
wingz_sso/migrations/: 0001_initial.py
wingz_sso/models/: user.py
wingz_sso/scripts/: create_user.py  init_user_data.py
wingz_sso/serializers/: user.py
wingz_sso/tests/test_models/: test_user.py
wingz_sso/tests/test_views/: test_login.py
wingz_sso/views/: login.py  user.py
