[metadata]
name = wingz-app
version = 0.1.0
author = zhoujingran
author_email = jingranzhou@126.com
description = wingz django developer assignment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhoujingryan/wingz-app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    django~=4.2
    django-filter
    djangorestframework
    djangorestframework-simplejwt
    django-extensions
    drf-yasg

[options.extras_require]
dev =
    black
    flake8
    autoflake
    mypy
    isort
    pre-commit
    django-debug-toolbar
    django-fakery

test =
    pytest
    pytest-cov
    pytest-django
